--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,8 @@ android {
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/GuaiMaoSdk_3.8.6.jar')
+    compile files('libs/GuaiMaoSdk_3.8.8.jar')
+    compile files('libs/fastjson-1.2.76.jar')
     compile files('libs/android-v4.jar')
     compile files('libs/du.jar')
     compile files('libs/gdt.jar')
