--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/GuaiMaoSdk_3.9.0.jar')
+    compile files('libs/GuaiMaoSdk_3.9.2.jar')
     compile files('libs/fastjson-1.2.76.jar')
     compile files('libs/android-v4.jar')
     compile files('libs/du.jar')
@@ -58,4 +58,5 @@ dependencies {
     compile files('libs/bcprov-jdk16-139.jar')
     compile files('libs/qiyu-sdk-3.11.1.jar')
     compile files('libs/tracking.1.7.1.jar')
+    compile files('libs/thinkingSDK_2.7.0.jar')
 }
