--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -180,7 +180,9 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:name="com.game.sdk.reconstract.ui.NewH5Activity"
             android:launchMode="singleTask"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:screenOrientation="portrait"
+            />
 
         <!-- 现在支付 -->
         <activity
@@ -347,10 +349,25 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:theme="@style/ysf_window_theme" />
+<!--        <activity-->
+<!--            android:configChanges="orientation|screenSize|keyboardHidden"-->
+<!--            android:name="com.game.sdk.reconstract.ui.NewH5Activity"-->
+<!--            android:launchMode="singleTask"-->
+<!--            android:theme="@android:style/Theme.Translucent.NoTitleBar" />-->
+
         <activity
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:name="com.game.sdk.reconstract.ui.NewH5Activity"
-            android:launchMode="singleTask"
+            android:name="com.game.sdk.reconstract.ui.usercenter.UserInfoEditActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <activity
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:name="com.game.sdk.reconstract.ui.usercenter.ResetPwdActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <activity
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:name="com.game.sdk.reconstract.ui.usercenter.UsercenterBindPhoneActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <!-- 数数  -->
