--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 29 10:56:15 CST 2021
-sdk.dir=C\:\\Users\\36023\\AppData\\Local\\Android\\Sdk
+#Mon Dec 13 20:03:19 CST 2021
+sdk.dir=C\:\\Users\\Fan\\AppData\\Local\\Android\\Sdk
