--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 13 20:03:19 CST 2021
-sdk.dir=C\:\\Users\\Fan\\AppData\\Local\\Android\\Sdk
+#Tue Sep 06 17:33:23 CST 2022
+sdk.dir=D\:\\android\\sdk
