--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,8 @@
 systemProp.http.proxyHost=192.168.88.22
 org.gradle.jvmargs=-Xmx2536m
 systemProp.http.proxyPort=8118
+android.useAndroidX=true
+#android.enableBuildCache=false
+android.useNewApkCreator=false
 
 
