--- a/local.properties
+++ b/local.properties
@@ -4,4 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=D\:\\Program Files\\Android\\sdk
+#Fri Mar 01 02:52:34 CST 2024
+sdk.dir=/Users/admin/Library/Android/sdk
